[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Zakhar Chaichenko <chaichenko.98@mail.ru>"]

packages = [ { include = "brain_games" }, ]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.Brain_games:main"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[flake8]
accept-encodings = utf-8
max-complexity = 6
statistics = False
max-line-length = 80
doctests = True
enable-extensions = G
isort-show-traceback = True

ignore =

per-file-ignores = hexlet_python_package/scripts/*.py: WPS421

[tool:pytest]
norecursedirs = __pycache__
addopts = --strict-markers

[isort]
multi_line_output = 3
include_trailing_comma = true
default_section = FIRSTPARTY
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
